--- a/assets/css/customdevs.css
+++ b/assets/css/customdevs.css
@@ -1,8 +1,6 @@
 /*
 
-TemplateMo 582 Tale SEO Agency
-
-https://templatemo.com/tm-582-tale-seo-agency
+Customdevs
 
 */
 
@@ -100,7 +98,7 @@ ul {
 p {
   font-size: 15px;
   line-height: 30px;
-  color: #afafaf;
+  color: black;
 }
 
 img {
